@@ -34,6 +34,10 @@ magnitude_picker_width = 10
 # experimental, not sure what happens when modifying/deleting/saving to
 # QuakeML, use at your own risk!
 allow_multiple_picks_with_same_seed_id = false
+# percentage to scroll with wheel, deciaml from 0.0 to 1.0
+scrollWheelPercentage = 0.30
+# whether to revert scroll direction
+scrollWheelInvert = false
 
 [station_combinations]
 EXAMPLE1 = II.PFO.00.LH?,GE.APE..LH?,GE.PSZ..LH?,CI.BBR..LH*,IV.PRMA..LH?,G.RER..LH*
@@ -93,6 +97,7 @@ nextStream = x
 # mouse wheels zooms time axis by default, but when this key is held down it
 # zooms amplitude axis instead
 switchWheelZoomAxis = shift
+scrollWheelZoom = alt
 setWeight0 = 0
 setWeight1 = 1
 setWeight2 = 2
